# Step-MPPI

./: README.md
f1tenth/: .gitignore  README.md  main.py  pyproject.toml  requirements-lock.txt  requirements.txt
f1tenth/dmppi_learning/: dmppi_config.yaml  neural_dmppi_config.yaml  sim_test.ipynb  test_dmppi.py  test_neural_dmppi.py  train_dmppi.py  train_neural_dmppi.py
f1tenth/imit_learning/: NN.py  dagger_training.py  data_collection.py  mppi_config.yaml  simple_training.py  test_cmppi.py  test_dagger.py  utils.py
f1tenth/make_plot/: cmppi_trajectory_N100_dt10ms.csv  cmppi_trajectory_N100_dt20ms.csv  cmppi_trajectory_N40_dt50ms.csv  cmppi_trajectory_N50_dt10ms.csv  cmppi_trajectory_N50_dt20ms.csv  dmppi_trajectory_N100_dt50ms.csv  dpc_trajectory_N100_dt50ms.csv  neural_dmppi_trajectory_N100_dt50ms.csv
f1tenth/saved_model/: dmppi_constrained_policy.pt  dpc_constrained_policy.pt  neural_dmppi_constrained_policy.pt
f1tenth/src/dmppi/: DMPPI_config.py  DMPPI_solver.py  __init__.py  constraints.py
f1tenth/src/dpc/: DPC_config.py  DPC_planner.py  DPC_solver.py  __init__.py  constraints.py  discretizers.py
f1tenth/src/mppi/: Constrained_MPPI.py  MPPI_solver.py  MPPI_solver_torch.py  __init__.py  constraints.py
f1tenth/src/policy/: __init__.py  policy.py
f1tenth/src/trainer/: DMPPI_trainer.py  DPC_trainer.py  __init__.py
f1tenth/ss_learning/: compare_dpc_mppi.py  dpc_config.yaml  dpc_guided_mppi.py  mppi_config.yaml  test_dpc.py  train_dpc.py  utils.py
quadruped/: .gitignore  README.md
quadruped/step_mppi/: dmppi_solver.py  dmppi_trainer.py  (+2 more)
(+13 files in other folders)
