[project]
name = "l2o_mppi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.8.1",
    "cvxpylayers>=1.0.1",
    "f1tenth_gym @ git+https://github.com/f1tenth/f1tenth_gym.git@dev-dynamics",
    "gurobipy>=13.0.1",
    "ipykernel>=7.2.0",
    "jax[cuda12]==0.4.33",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pathlib>=1.0.1",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "wandb>=0.25.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
